--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -1,4 +1,4 @@
-# .github/workflows/api-ci-deploy.yml
+# .github/workflows/api-deploy.yml
 name: "API • CI + Deploy (Azure Container Apps)"
 
 on:
@@ -39,84 +39,99 @@ jobs:
   # CI: Lint, Build & Test (non-blocking)
   # ======================
   build-and-test:
-    name: "Build & Test (non-blocking)"
+    name: "Build & Test"
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
+    # Let this job publish check runs for test results
+    permissions:
+      contents: read
+      checks: write       # <-- required by publish-unit-test-result-action
+
+    # Only affects `run:` steps (not `uses:`)
     defaults:
       run:
         working-directory: backend
+        shell: bash
 
     steps:
       - name: Checkout
         uses: actions/checkout@v5
 
-      # --- Ruff (runs without setting up Python; adds inline annotations)
-      - name: Ruff
-        id: ruff
-        uses: astral-sh/ruff-action@v3
-        with:
-          # Respect your pyproject; fallback to latest if not pinned
-          # Annotate directly in GitHub checks
-          args: "check --output-format=github backend"
-        continue-on-error: true # ← keep CI green while lint fixes are in progress
-
-      # Optional: Still fail the job if you want a hard gate on PRs only
-      # - if: github.event_name == 'pull_request' && steps.ruff.outcome == 'failure'
-      #   run: exit 1
-
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
           python-version: "3.11"
-          cache: "pip"
-          cache-dependency-path: |
-            backend/pyproject.toml
-            backend/poetry.lock
-            backend/requirements*.txt
 
-      # Use pip to avoid Poetry bootstrap overhead; this avoids "poetry not found"
-      - name: Install backend dependencies (pip)
-        run: |
-          python -m pip install --upgrade pip wheel
-          # Install runtime + dev/test dependencies declared in your pyproject
-          pip install -e ".[dev,test]"
-          # Emit versions for debugging
-          python -V
-          pip freeze | sort
+      # Install Poetry the supported way and create an in-project virtualenv
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
-      # Run pytest but keep the job green; emit JUnit so we can publish results
-      - name: Pytest (non-blocking)
-        id: pytest
+      # Cache the in-project .venv based on the lockfile
+      - name: Cache Poetry virtualenv
+        id: poetry-cache
+        uses: actions/cache@v4
+        with:
+          path: backend/.venv
+          key: ${{ runner.os }}-py311-poetry-${{ hashFiles('backend/poetry.lock') }}
+
+      - name: Install deps (Poetry)
+        if: steps.poetry-cache.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
+
+      # Run Ruff via the official action; do not fail the job yet
+      - name: Ruff (lint)
+        uses: astral-sh/ruff-action@v3
+        with:
+          args: "check --config backend/pyproject.toml backend"
+        continue-on-error: true  # allow failures during development
+        env:
+          RUFF_OUTPUT_FORMAT: github
+
+      # Always create a junit XML, even if pytest crashes or tests fail
+      - name: Pytest (always produce JUnit)
         run: |
+          set -euo pipefail
           mkdir -p ../test-results
-          # Keep the run fast & readable:
-          #  -q          quiet
-          # -ra          show summary of skips/xfails
-          # --maxfail=1  stop after first real failure (still non-blocking)
-          # --durations=10 to surface slowest tests
-          pytest -q -ra --maxfail=1 --durations=10 --junitxml=../test-results/pytest.junit.xml
-        continue-on-error: true
+          # Try to run tests; never fail the step (we're publishing results either way)
+          poetry run pytest \
+            -q \
+            --maxfail=1 \
+            --disable-warnings \
+            --junitxml=../test-results/pytest.junit.xml || true
 
-      # Always upload artifacts so devs can inspect locally
-      - name: Upload test results (artifact)
+          # If pytest didn't write the report (e.g., import error), create a minimal placeholder
+          if [[ ! -s ../test-results/pytest.junit.xml ]]; then
+            cat > ../test-results/pytest.junit.xml <<'XML'
+            <?xml version="1.0" encoding="utf-8"?>
+            <testsuite name="pytest" tests="0" failures="0" errors="1" skipped="0" time="0">
+              <testcase classname="collection" name="startup">
+                <error message="No tests collected or startup error">See job logs</error>
+              </testcase>
+            </testsuite>
+            XML
+          fi
+
+      - name: Upload raw test results (artifact)
+        if: always()
         uses: actions/upload-artifact@v4
-        if: always()
         with:
-          name: junit-pytest
-          path: test-results/pytest.junit.xml
-          if-no-files-found: warn
-          retention-days: 7
+          name: pytest-junit
+          path: test-results/pytest.junit.xml   # note: path is from repo root
 
-      # Publish JUnit nicely into the PR Checks tab (still non-blocking)
+      # Publish to Checks; runs even if pytest failed; needs checks: write
       - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
+        uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: "test-results/**/*.xml"
-          check_name: "Pytest (backend)"
-          # Do not fail the workflow if tests fail; just report
-          fail_on: "nothing"
+          files: |
+            test-results/**/*.xml
+        # uncomment to avoid PR comments if you prefer only check runs:
+        #   comment_mode: off
 
   # ======================
   # CD: Deploy (push to main or manual run only)
